push files from 06/21

--- a/Harel/week3/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/Harel/week3/startbootstrap-full-width-pics-gh-pages/index.html
@@ -58,7 +58,8 @@
                     <div class="col-lg-6">
                         <h2>Our Graphs</h2>
                         <p class="lead">We used the info on these graphs </p>
-                        <p class="mb-0"><img src = 'heat map screen shot'></p>
+                        <iframe src = 'heatmap.html' width = 1100 height = 1000 ></iframe>
+
                     </div>
                 </div>
             </div>
