--- a/Hari/week3/startbootstrap-full-width-pics-gh-pages/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/Hari/week3/startbootstrap-full-width-pics-gh-pages/startbootstrap-full-width-pics-gh-pages/index.html
@@ -42,6 +42,7 @@
                         <h2>Full Width Backgrounds</h2>
                         <p class="lead">A single, lightweight helper class allows you to add engaging, full width background images to sections of your page.</p>
                         <p class="mb-0">The universe is almost 14 billion years old, and, wow! Life had no problem starting here on Earth! I think it would be inexcusably egocentric of us to suggest that we're alone in the universe.</p>
+                      <img src='https://cdn.discordapp.com/attachments/966464082792308857/988859372341968987/unknown.png' width='600'>
                     </div>
                 </div>
             </div>
