--- a/Yifan/week3/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/Yifan/week3/startbootstrap-full-width-pics-gh-pages/index.html
@@ -57,8 +57,13 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Exploration of Data</h2>
-                        <p class="lead">Correlation Heatmap:</p>
-                        <p class="mb-0">A heatmap's main purpose is to display the correlation between features in a dataset. If you look above you are able to see all the features: Glucose, BMI, etc. and their correlation to the outcome.</p>
+                        <p class="lead">Random Forest:</p>
+                        <p class="mb-0">Random forest works by constructing a “forest” of decision trees and outputting the average result from the trees to categorize data. To increase the accuracy of the method, we can go through the data set and take out outliers and only apply the most relevant data points
+
+<ol>
+    <li> ...</li>
+</ol>
+</p>
                     </div>
                 </div>
             </div>
