--- a/Landen/week3/startbootstrap-full-width-pics-gh-pages/index.html
+++ b/Landen/week3/startbootstrap-full-width-pics-gh-pages/index.html
@@ -59,6 +59,15 @@
                         <h2>Machine learning Models</h2>
                         <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
                         <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
+                         <div style="height: 20rem"></div>
+        </div>
+        <!-- Content section-->
+        <section class="py-5">
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h2>Conclusion</h2>
+                        <p class="lead">This is all of the data we have used and the models we have used for our project.</p>
                     </div>
                 </div>
             </div>
